force-app/main/default/objects/SD_Zone__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dashboard Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SD_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>SD_Company__c</referenceTo>
        <relationshipName>Zone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_Type__c</fullName>
        <label>Zone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                    <default>true</default>
                    <label>Project</label>
                </value>
                <value>
                    <fullName>Non-Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Master Zone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SD_Company__c</columns>
        <columns>Zone_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Dashboard_Display__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>